ISSUE: Redmine 227, 222 PURPOSE: Adding generated sitemap files to gitignore.  DESCRIPTION: Scheduled jobs have been turned back on for loan notification, and are generating site map files that need to be ignored.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@ specimen_images
 bnhmMaps/tabfiles
 # Generated sitemap files
 sitemapindex.xml
-project1.xml.gz
-specimen4.xml
+media*.xml.gz
+project*.xml.gz
+publication*.xml.gz
+specimen*.xml.gz
+static*.xml.gz
+taxonomy*.xml.gz
 # Eclipse
 .project
