ISSUE: Redmine 227, 222 PURPOSE: Adding generated sitemap files to gitignore.  DESCRIPTION: Sitemap file is now compressed.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ specimen_images
 bnhmMaps/tabfiles
 # Generated sitemap files
 sitemapindex.xml
+sitemapindex.xml.gz
 media*.xml.gz
 project*.xml.gz
 publication*.xml.gz
