--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 cache
 mediaUploads
 specimen_images
+_notes/
+/bower_components/
+/node_modules/
+/images/
 bnhmMaps/tabfiles
 # Generated sitemap files
 sitemapindex.xml
